--- a/index.html
+++ b/index.html
@@ -2,4 +2,5 @@
 <html lang="en">
   <head><title>HitFire</title></head>
   <h1>HitFire</h1>
+  <p>This webpage doesn't have any content yet, please try again at a later date. thank you!!!</p>
 </html>
