--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel="stylesheet" href="css docs/home.css">
 <html lang="en">
   <head><title>HitFire</title></head>
   <h1>HitFire</h1>
