--- a/index.html
+++ b/index.html
@@ -2,6 +2,30 @@
 <link rel="stylesheet" href="css docs/home.css">
 <html lang="en">
   <head><title>HitFire</title></head>
-  <h1>HitFire</h1>
-  <p>This webpage doesn't have any content yet, please try again at a later date. thank you!!!</p>
+<div id="mySidebar" class="sidebar">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search.." title="Type in a category">
+    <ul id="myMenu">
+        <li><a href="index.html">home</a></li>
+
+    </ul>
+</div>
+  <div id="main">
+    <button class="openbtn" onclick="openNav()">&#9776; Menu</button>
+    <script src="js docs\sidebar.js"></script>
+    <script src="js docs\search.js"></script>
+
+
+	
+	<script>
+	// When the user clicks on <div>, open the popup
+	function myFunction() {
+	  var popup = document.getElementById("myPopup");
+	  popup.classList.toggle("show");
+	}
+	</script>
+		
+	  
+
+</div>
 </html>
