tiny change to setup and make new account

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()" title="Close search bar">&times;</a>
       <input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search..." title="Type in the desired page name">
       <ul id="myMenu">
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html">Index</a></li>
           <li><a href="game_info.html">Game Info</a></li>
           <li><a href="news.html">News</a></li>
           <li><a href="concepts.html">Concepts</a></li>
