pages build and deployment

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
   <div id="main">
-    <button class="openbtn" onclick="openNav()" title="Open the search bar">&#9776; </button>
+    <button class="openbtn" onclick="toggleNav" title="Open the search bar">&#9776; </button>
     <script src="js docs\sidebar.js"></script>
     <script src="js docs\search.js"></script>
 
